# cursor-mem

./: .gitignore  LICENSE  PUBLISH.md  README.md  README_CN.md  TESTING.md  cli.py  config.py  hook_handler.py  installer.py  pyproject.toml
context/: builder.py
cursor_mem/: __init__.py
cursor_mem/context/: compressor.py  injector.py
cursor_mem/mcp/: server.py
cursor_mem/storage/: search.py
cursor_mem/summarizer/: ai_powered.py
cursor_mem/ui/: viewer.html
cursor_mem/worker/: session_manager.py
docs/: CHROME_INSPIRED_EXTENSIONS_CN.md  DESIGN.md  DESIGN_CN.md  ROADMAP.md  ROADMAP_CN.md  THREE_LAYER_WORKFLOW.md  THREE_LAYER_WORKFLOW_CN.md  USER_MANUAL.md  USER_MANUAL_CN.md
mcp/: server.py
storage/: database.py  observation_store.py  search.py  session_store.py  time_display.py
summarizer/: rule_based.py
tests/: conftest.py  test_cli.py  test_compressor.py  test_config.py  test_hook_handler.py  test_storage.py  test_worker_routes.py
worker/: routes.py  server.py
