[project]
name = "cursor-mem"
version = "0.1.1"
description = "Persistent memory system for Cursor IDE — remembers context across sessions"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "cursor-mem contributors"}]
keywords = ["cursor", "ide", "memory", "ai", "hooks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "httpx>=0.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.24"]

[project.scripts]
cursor-mem = "cursor_mem.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cursor-mem"
Repository = "https://github.com/YOUR_USERNAME/cursor-mem"
Documentation = "https://github.com/YOUR_USERNAME/cursor-mem#readme"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# Root directory is the cursor_mem package (no inner cursor_mem/ folder)
[tool.setuptools]
packages = ["cursor_mem", "cursor_mem.context", "cursor_mem.mcp", "cursor_mem.storage", "cursor_mem.summarizer", "cursor_mem.ui", "cursor_mem.worker"]

[tool.setuptools.package-dir]
cursor_mem = "."
"cursor_mem.context" = "context"
"cursor_mem.mcp" = "mcp"
"cursor_mem.storage" = "storage"
"cursor_mem.summarizer" = "summarizer"
"cursor_mem.ui" = "ui"
"cursor_mem.worker" = "worker"

[tool.setuptools.package-data]
cursor_mem = ["ui/*.html"]
